fix: wrong size

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -27,9 +27,10 @@ $bg-color-to: #5193E0;
 
     .text {
       margin: auto;
-      font-size: 1.8rem;
+      font-size: 1.5rem;
       font-weight: 800;
       color: black;
+      text-align: center;
     }
   }
 }
